--- a/SampleApplication/Web.config
+++ b/SampleApplication/Web.config
@@ -3,6 +3,14 @@
   For more information on how to configure your ASP.NET application, please visit // Change to Feature
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
+<!--
+  For more information on how to configure your ASP.NET application, please visit // Test 
+  https://go.microsoft.com/fwlink/?LinkId=301880
+  -->
+<!--
+  For more information on how to configure your ASP.NET application, please visit // Test  m3 commit
+  https://go.microsoft.com/fwlink/?LinkId=301880
+  -->
 <configuration>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
